<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="7dp">

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/done_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/done"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/title"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/author"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/author"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genre_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/genre"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/genre"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editorial_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/editorial"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/editorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:text="@string/editorial"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookshop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/bookshop"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/bookshop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:text="@string/bookshop"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startDate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/start_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:text="@string/start_date"
                style="@style/letter_black"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deadline_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:text="@string/deadline"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:text="@string/deadline"
                style="@style/letter_black"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
